--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v2",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://FadiMaher.github.io",
     "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
